fix repeater row top spacing

--- a/src/app/public/modules/repeater/repeater-item.component.scss
+++ b/src/app/public/modules/repeater/repeater-item.component.scss
@@ -4,6 +4,7 @@
 .sky-repeater-item {
   display: flex;
   @include sky-border(row);
+	padding-top: 0;
 
   sky-inline-form {
     display: block;
@@ -13,6 +14,7 @@
 
 .sky-repeater-item-left {
   margin-top: -2px;
+	padding-top: $sky-padding;
 }
 
 .sky-repeater-item-right {
@@ -23,6 +25,7 @@
 .sky-repeater-item-header {
   align-items: center;
   display: flex;
+	padding-top: $sky-padding;
 }
 
 .sky-repeater-item-chevron {
